--- a/.env.local
+++ b/.env.local
@@ -14,6 +14,7 @@ PGADMIN_PASSWORD=product-manager_pgPassWord
 
 PHP_VERSION=8.2
 APP_FOLDER=./app
+APP_FRONT_FOLDER=./app-front
 APP_ENV=dev
 APP_SECRET=your_app_secret
 DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_CONTAINER_NAME}:5432/${DATABASE_NAME}
