--- a/app/composer.json
+++ b/app/composer.json
@@ -66,6 +66,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "csi": [
+            "./vendor/bin/php-cs-fixer fix src --allow-risky=yes",
+            "./vendor/bin/phpstan"
         ]
     },
     "conflict": {
@@ -78,6 +82,8 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64",
+        "phpstan/phpstan": "^2.0",
         "symfony/maker-bundle": "^1.61"
     }
 }
