feat(15): setup and implement phpunit + coverage

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -21,3 +21,14 @@
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+coverage/
+###< phpunit/phpunit ###
