--- a/app/composer.json
+++ b/app/composer.json
@@ -7,7 +7,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^3",
+        "doctrine/dbal": "^4.0",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.3",
@@ -67,9 +67,14 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+        "tests": [
+            "APP_ENV=test bin/console doctrine:fixtures:load -n",
+            "APP_ENV=test php -dpcov.directory=. -dpcov.exclude=\"~vendor~\" vendor/bin/phpunit tests --coverage-text --coverage-html ./coverage"
+        ],
         "csi": [
             "./vendor/bin/php-cs-fixer fix src --allow-risky=yes",
-            "./vendor/bin/phpstan"
+            "./vendor/bin/phpstan",
+            "@tests"
         ]
     },
     "conflict": {
@@ -82,8 +87,15 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "friendsofphp/php-cs-fixer": "^3.64",
         "phpstan/phpstan": "^2.0",
-        "symfony/maker-bundle": "^1.61"
+        "phpunit/php-code-coverage": "^11.0",
+        "phpunit/phpunit": "^11.4",
+        "symfony/browser-kit": "7.0.*",
+        "symfony/css-selector": "7.0.*",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": "^7.1"
     }
 }
