--- a/app/composer.json
+++ b/app/composer.json
@@ -68,6 +68,8 @@
             "@auto-scripts"
         ],
         "tests": [
+            "APP_ENV=test bin/console --env=test doctrine:schema:drop --force",
+            "APP_ENV=test bin/console --env=test doctrine:schema:create",
             "APP_ENV=test bin/console doctrine:fixtures:load -n",
             "APP_ENV=test php -dpcov.directory=. -dpcov.exclude=\"~vendor~\" vendor/bin/phpunit tests --coverage-text --coverage-html ./coverage"
         ],
